--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=workshop_managment
+
+# --- MySQL Datasource ---
+# Override via environment variables in production; sensible defaults for local dev
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/workshopdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:workshop}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# --- JPA / Hibernate ---
+# For development: create/alter tables automatically. Use 'validate' or migrations in prod.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# SSL settings for Aiven (MySQL Connector/J)
+spring.datasource.hikari.data-source-properties.sslMode=${DB_SSL_MODE:VERIFY_IDENTITY}
+spring.datasource.hikari.data-source-properties.trustCertificateKeyStoreUrl=file:./aiven-truststore.jks
+spring.datasource.hikari.data-source-properties.trustCertificateKeyStorePassword=${DB_TRUSTSTORE_PASSWORD:changeit}
+
+# Connection pool (Hikari) tuning (optional sensible defaults)
+spring.datasource.hikari.maximum-pool-size=${DB_MAX_POOL_SIZE:10}
+spring.datasource.hikari.minimum-idle=${DB_MIN_IDLE:2}
+spring.datasource.hikari.idle-timeout=${DB_IDLE_TIMEOUT_MS:300000}
+spring.datasource.hikari.connection-timeout=${DB_CONN_TIMEOUT_MS:30000}
