chore(secrets): ignore .env files and add .env.example templates (backend/frontend)

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ build/
 # Ignore node dependencies everywhere (e.g., frontend/)
 node_modules/
 **/node_modules/
+
+### Environment files (secrets) ###
+# Never commit real environment files; use the provided .env.example templates
+.env
+**/.env
+!.env.example
+!**/.env.example
