chore(secrets): ignore truststore/keystore artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ node_modules/
 **/.env
 !.env.example
 !**/.env.example
+
+### Certificates / Truststores ###
+# Avoid committing truststore/keystore files
+aiven-truststore.jks
